# himalog

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/workflows/: run-lint.yml  run-tests.yml
docs/: advanced.md  api.md  configuration.md  features.md  index.md  installation.md  usage.md
himalog/: config.py  core.py  formatters.py  hello_world.py  logger.py  version.py
himalog/handlers/: async_http.py  async_smtp.py  console.py  file.py  http.py  rotating_file.py  smtp.py  timed_rotating_file.py
tests/: test_async_handlers.py  test_hello_world.py  test_logger.py
