[project]
name = "himalog"
version = "0.1.0"
description = ""
authors = [
    {name = "maharanasarkar",email = "maharanasarkars3@gmail.com"}
]
license = {text = "LICENSE"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests (>=2.32.4,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pytest (>=8.4.1,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
