[project]
name = "himalog"
version = "0.1.2"
description = "Himalog – Flexible, Modular Logging for Python Applications"
authors = [
    {name = "himalabs",email = "maharanasarkars3@gmail.com"}
]
license = {text = "LICENSE"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests (>=2.32.4,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pytest (>=8.4.1,<9.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "mypy (>=1.17.0,<2.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "ruff (>=0.12.5,<0.13.0)",
    "importlib-metadata (>=8.7.0,<9.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "toml (>=0.10.2,<0.11.0)"
]

[tool.black]
line-length = 79

[tool.mypy]
strict = true
ignore_missing_imports = true

[tool.ruff]
line-length = 79
extend-select = ["I"]

[tool.poetry.group.dev.dependencies]
types-pyyaml = "^6.0.12.20250822"
types-toml = "^0.10.8.20240310"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
